<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TampilArtis">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/iv_artis"
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:layout_gravity="center"
            android:layout_marginTop="48dp"
            android:contentDescription="@string/foto_artis"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/edit_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/nama_artis"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/edit_anggota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nama_anggota" />

        <TextView
            android:id="@+id/edit_negara"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nama_negara" />

        <TextView
            android:id="@+id/edit_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nama_genre" />

        <TextView
            android:id="@+id/edit_tahun_aktif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tahun_aktif" />

        <TextView
            android:id="@+id/edit_aktif_sampai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/aktif_sampai" />

        <TextView
            android:id="@+id/edit_isi_sinopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sinopsis" />

        <TextView
            android:id="@+id/edit_nama_album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/nama_album" />

        <TextView
            android:id="@+id/edit_tahun_rilis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tahun_rilis" />

        <TextView
            android:id="@+id/edit_isi_lagu"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/daftar_lagu"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>