<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".InputArtis">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_artis"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/foto_artis" />

                <TextView
                    android:id="@+id/textViewT20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua" />

                <ImageView
                    android:id="@+id/foto_artis"
                    android:layout_width="256dp"
                    android:layout_height="192dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/foto_artis"
                    app:srcCompat="@drawable/ic_baseline_people_24" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewNamaArtis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/artis" />

                <TextView
                    android:id="@+id/textViewT21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua" />

                <EditText
                    android:id="@+id/edit_artist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/nama_artis"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewNamaAnggota"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anggota" />

                <TextView
                    android:id="@+id/textViewT22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua" />

                <EditText
                    android:id="@+id/edit_anggota"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/nama_anggota"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewNamaNegara"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/negara" />

                <TextView
                    android:id="@+id/textViewT23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua" />

                <EditText
                    android:id="@+id/edit_negara"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/nama_negara"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewNamaGenre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre" />

                <TextView
                    android:id="@+id/textViewT24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua" />

                <EditText
                    android:id="@+id/edit_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/nama_genre"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewTahunAktif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tahun_aktif" />

                <TextView
                    android:id="@+id/textViewT25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua" />

                <EditText
                    android:id="@+id/edit_tahun_aktif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/tahun_aktif"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewAktifSampai"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aktif_sampai" />

                <TextView
                    android:id="@+id/textViewT26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua" />

                <EditText
                    android:id="@+id/edit_aktif_sampai"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/aktif_sampai"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewSinopsis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sinopsis" />

                <TextView
                    android:id="@+id/textViewT27"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua" />

                <EditText
                    android:id="@+id/edit_isi_sinopsis"
                    android:layout_width="wrap_content"
                    android:layout_height="240dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/sinopsis"
                    android:inputType="textMultiLine" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewlabelalbum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_album" />

                <TextView
                    android:id="@+id/textViewT29"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua" />

                <EditText
                    android:id="@+id/edit_nama_album"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/nama_album"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewrilis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_rilis" />

                <TextView
                    android:id="@+id/textViewT30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua" />

                <EditText
                    android:id="@+id/edit_rilis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/tahun_rilis"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewlagu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lagu" />

                <TextView
                    android:id="@+id/textViewT28"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua" />

                <EditText
                    android:id="@+id/edit_isi_lagu"
                    android:layout_width="wrap_content"
                    android:layout_height="240dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/daftar_lagu"
                    android:inputType="textMultiLine" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/btn_simpan"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:text="@string/simpan"
            android:textColor="@color/white" />
    </LinearLayout>
</ScrollView>