<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    android:elevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/artist_photo"
            android:layout_width="96dp"
            android:layout_height="96dp"
            app:srcCompat="@drawable/ic_launcher_foreground"
            android:contentDescription="@string/foto_artis" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_artis"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:text="@string/nama_artis"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/label_negara"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama_negara"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/label_genre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nama_genre"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>